# NirUI

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
installer/: NirUI.iss
scripts/: build-installer.ps1
src/: main.cpp  resources.rc
src/cli/: cli_parser.cpp  cli_parser.h
src/core/: app_groups.cpp  app_groups.h  nircmd_commands.cpp  nircmd_commands.h  nircmd_manager.cpp  nircmd_manager.h
src/ui/: svg_icons.cpp  svg_icons.h  ui_app.cpp  ui_app.h
src/utils/: http_downloader.cpp  http_downloader.h
